# PyPredictor-StreamlitPredict-App-Web-que-simula-precos-Python

./: README.md  app.py  pyproject.toml  testes.ipynb
