[project]
name = "projeto-machine-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "gui-fofinho",email = "guilhermematte2009@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_machine_learning", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
